Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32275

getting error 'Illegal parameter data types row and bigint for operation '+' ' when using ITERATE in a FOR..DO

    XMLWordPrintable

Details

    Description

      Hi,
      customer is getting the following error when he comments the DECLARE CONTINUE, while it works if the DECLARE is uncommented:

      'Illegal parameter data types row and bigint for operation '+' '

      The following procedure was created by the customer to test the ITERATE clause but it's identical to the one used in prod

      delimiter //
      CREATE DEFINER='root'@'%' PROCEDURE 'forIterateBug'()
          MODIFIES SQL DATA
      BEGIN
      	DECLARE 'loopDone' TINYINT DEFAULT FALSE;
       
      	FOR '_unused' IN (SELECT "") DO
      		'innerLoop': LOOP
      			IF 'loopDone' THEN
      				LEAVE 'innerLoop';
      			END IF;
       
      			SET 'loopDone' = TRUE;
      			BEGIN
      				#DECLARE CONTINUE HANDLER FOR SQLEXCEPTION BEGIN END;
      				ITERATE 'innerLoop';
      			END;
      		END LOOP;
      	END FOR;
      END 
      //

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              Bongini Luigi (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d Original Estimate - 1d
                  1d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1h 40m
                  1d 1h 40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.